Added "classes=" and "class="

--- a/flowd.conf
+++ b/flowd.conf
@@ -8,6 +8,7 @@ write-int=3600
 reload-int=600
 #fromshmem=yes
 #mapkey=12011971
+classes=world, ua, local, undef
 
 ignore src=!10.0.1.0/24
 happy ip=193.193.192.209 fallthru reverse # tunnel
@@ -17,4 +18,5 @@ local ifindex=1
 ukrnet ifindex=22
 ukrnet as=8856
 ukrnet nexthop=192.117.224.254
+world class=world
 other
