Added "make install"

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,3 +21,7 @@ testacl:	acl.c flowd.h
 	gcc -g -Wall -DDEBUG=1 -o testacl -O2 -funsigned-char acl.c
 test:		test.c
 	gcc -g -Wall -o test -O2 -funsigned-char test.c -lpcap
+
+install:	all
+	install flowd $(prefix)/bin
+	install flowd.conf @sysconfdir@
