embedded perl support

--- a/configure.in
+++ b/configure.in
@@ -4,6 +4,7 @@ AC_INIT(flowd.c)
 
 dnl Checks for programs.
 AC_PROG_CC
+AC_PATH_PROG(PERL, perl, perl)
 
 CFLAGS=
 dnl Checks for header files.
@@ -23,6 +24,63 @@ case x$ac_cv_func_inet_addr in
     ;;
 esac
 
+dnl Check for embedded perl
+AC_ARG_WITH(perl,
+            [  --with-perl             embedded perl support (default no)],
+            do_perl=yes, do_perl=no)
+case x$do_perl in
+  xyes)
+   AC_MSG_CHECKING(for libperl)
+   PERLDIR=`$PERL -MConfig -e 'print $Config{archlib}' 2>/dev/null`
+   if PERLCOPT=`$PERL -MExtUtils::Embed -e ccopts 2>/dev/null`
+   then
+     PERLLOPT=`$PERL -MExtUtils::Embed -e ldopts`
+     case x$PERLDIR in
+       x)
+         AC_MSG_RESULT(yes)
+         ;;
+       *)
+         AC_MSG_RESULT($PERLDIR)
+         ;;
+     esac
+   else
+     case x$PERLDIR in
+       x)
+         AC_MSG_RESULT(no)
+         ;;
+       *)
+         PERLCOPT="-I $PERLDIR/CORE -Dbool=char -DHAS_BOOL"
+         PERLLOPT="$PERLDIR/auto/DynaLoader/DynaLoader.a -L$PERLDIR/CORE -lperl -ldl -lcrypt -lm"
+         AC_CHECK_LIB(dl, main, PERLLOPT="$PERLLOPT -ldl")
+         AC_CHECK_LIB(crypt, main, PERLLOPT="$PERLLOPT -lcrypt")
+         AC_CHECK_LIB(m, main, PERLLOPT="$PERLLOPT -lm")
+         AC_CHECK_LIB(socket, main, PERLLOPT="$PERLLOPT -lsocket")
+         AC_MSG_RESULT($PERLDIR)
+         ;;
+     esac
+   fi
+   case x$PERLCOPT in
+     x)
+       ;;
+     *)
+       AC_MSG_CHECKING(for working libperl)
+       OLD_LIBS=$LIBS
+       OLD_CFLAGS=$CFLAGS
+       LIBS="$LIBS $PERLLOPT"
+       CFLAGS="$CFLAGS $PERLCOPT"
+       AC_TRY_LINK([
+          #include <EXTERN.h>
+          #include <perl.h>
+          #include <XSUB.h>],[perl_alloc()],
+        AC_DEFINE(DO_PERL) AC_MSG_RESULT(yes); WORKING_PERL=yes,
+        AC_MSG_RESULT(no); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS,
+        AC_MSG_RESULT(cross-compiling. No assumptions made); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS
+       )
+       ;;
+   esac
+   ;;
+esac
+
 dnl Set dirs
 logdir=/var/log/flow
 AC_ARG_WITH(logdir,
@@ -34,7 +92,7 @@ AC_ARG_WITH(debug,
      [  --with-debug            generate debug info],
      [CFLAGS="$CFLAGS -g"], [CFLAGS="$CFLAGS -O3"])
 
-nl Set shmem params
+dnl Set shmem params
 nbits=2
 maxprefix=24
 AC_ARG_WITH(nbits,
