--- a/flowd.conf
+++ b/flowd.conf
@@ -9,6 +9,7 @@ reload-int=600
 #fromshmem=yes
 #mapkey=12011971
 classes=world, ua, local, undef
+#perlwrite=/usr/local/etc/flowd.pl::write
 
 ignore src=!10.0.1.0/24
 happy ip=193.193.192.209 fallthru reverse # tunnel
