--- a/flowd.conf
+++ b/flowd.conf
@@ -10,6 +10,13 @@ reload-int=600
 #mapkey=12011971
 classes=world, ua, local, undef
 #perlwrite=/usr/local/etc/flowd.pl::write
+#mysql_user=
+#mysql_pwd=
+#mysql_host=localhost:0
+#mysql_socket=
+#mysql_db=flow
+#mysql_table=traffic_%Y_%m
+#mysql_utable=users
 
 ignore src=!10.0.1.0/24
 happy ip=193.193.192.209 fallthru reverse # tunnel
