--- a/configure.in
+++ b/configure.in
@@ -147,13 +147,14 @@ case x$withval in
       *)
         AC_MSG_CHECKING(if snmp.h is in /usr/local/include/ucd-snmp)
         CFLAGS="$CFLAGS -I /usr/local/include"
-        AC_TRY_COMPILE([#include <ucd-snmp/snmp.h>], [],
-                       AC_MSG_RESULT(yes); snmp_ok=yes,
-                       AC_MSG_RESULT(no); snmp_ok=no)
+        AC_TRY_COMPILE([#include <sys/types.h>
+                        #include <ucd-snmp/asn1.h>
+                        #include <ucd-snmp/snmp.h>], [],
+                        AC_MSG_RESULT(yes); snmp_ok=yes,
+                        AC_MSG_RESULT(no); snmp_ok=no)
         case x$snmp_ok in
           xyes)
             AC_DEFINE(HAVE_UCD_SNMP_SNMP_H)
-            ac_cv_header_ucd_snmp_snmp_h=yes
             ;;
           *)
             CFLAGS="$OLD_CFLAGS"
@@ -169,7 +170,7 @@ case x$withval in
     esac
     case x$snmp_ok in
       xyes)
-        AC_MSG_CHECKING(for working libsnmp)
+        AC_MSG_CHECKING(for libsnmp)
         OLD_LIBS="$LIBS"
         LIBS="$LIBS -lsnmp -lcrypto"
         AC_TRY_LINK([
@@ -189,11 +190,48 @@ case x$withval in
          ],[
           struct snmp_session  session;
           snmp_sess_init(&session)
-         ],
-         AC_MSG_RESULT(yes),
-         AC_MSG_RESULT(no); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS; snmp_ok=no,
-         AC_MSG_RESULT(cross-compiling. No assumptions made); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS
-        )
+         ], AC_MSG_RESULT(yes), AC_MSG_RESULT(no); snmp_ok=no,
+          AC_MSG_RESULT(cross-compiling. No assumptions made) snmp_ok=no)
+        case x$snmp_ok in
+          xno)
+            AC_MSG_CHECKING(for libsnmp in /usr/local/lib)
+            OLD_LDFLAGS="$LDFLAGS"
+            LDFLAGS="$LDFLAGS -L/usr/local/lib"
+            AC_TRY_LINK([
+              #include <sys/types.h>
+              #include <sys/socket.h>
+              #include <netinet/in.h>
+              #include <arpa/inet.h>
+              #include <ucd-snmp/asn1.h>
+              #include <ucd-snmp/snmp.h>
+              #include <ucd-snmp/snmp_api.h>
+              #include <ucd-snmp/snmp_client.h>
+              #include <ucd-snmp/snmp_impl.h>
+              #include <ucd-snmp/snmp_parse_args.h>
+              #include <ucd-snmp/mib.h>
+              #include <ucd-snmp/system.h>
+              #include <ucd-snmp/default_store.h>
+             ],[
+              struct snmp_session  session;
+              snmp_sess_init(&session)
+             ],
+             AC_MSG_RESULT(yes); snmp_ok=yes, AC_MSG_RESULT(no),
+             AC_MSG_RESULT(cross-compiling. No assumptions made))
+            case x$snmp_ok in
+              xno)
+                case x$do_snmp in
+                  xyes)
+                    AC_MSG_WARN([ucd-snmp not found, SNMP support disabled])
+                    do_snmp=no
+                    ;;
+                esac
+                CFLAGS="$OLD_CFLAGS"
+                LIBS="$OLD_LIBS"
+                LDFLAGS="$OLD_LDFLAGS"
+                ;;
+            esac
+            ;;
+          esac
         ;;
     esac
     case x$snmp_ok in
