--- a/Makefile.in
+++ b/Makefile.in
@@ -18,7 +18,7 @@ getclass.o:	getclass.c flowd.h
 	gcc $(COPT) -o getclass.o -c getclass.c
 
 testacl:	acl.c flowd.h
-	gcc -g -Wall -DDEBUG=1 -o testacl -O2 -funsigned-char acl.c
+	gcc -g -Wall -DMAKETEST=1 -o testacl -O2 -funsigned-char acl.c
 test:		test.c
 	gcc -g -Wall -o test -O2 -funsigned-char test.c -lpcap
 
