--- a/flowd.conf
+++ b/flowd.conf
@@ -19,12 +19,16 @@ classes=world, ua, local, undef
 #mysql_utable=users
 
 ignore src=!10.0.1.0/24
+router=10.0.1.1
 happy ip=193.193.192.209 fallthru reverse # tunnel
 local ip=10.0.0.0/8
 local ip=224.0.0.0/24 # ospf multicast
 local ifindex=1
-ukrnet ifindex=22
 ukrnet as=8856
 ukrnet nexthop=192.117.224.254
+ukrnet ifdescr=FastEthernet0/0.202
+tsystems ifip=212.40.34.206
+skyvision ifalias=skyvision
+wnet ifname=Fa0/0.248
 world class=world
 other
