add "router=any" feature

--- a/flowd.conf
+++ b/flowd.conf
@@ -19,7 +19,8 @@ classes=world, ua, local, undef
 #mysql_utable=users
 
 ignore src=!10.0.1.0/24
-router=10.0.1.1
+
+router=public@10.0.1.1	# community@addr
 happy ip=193.193.192.209 fallthru reverse # tunnel
 local ip=10.0.0.0/8
 local ip=224.0.0.0/24 # ospf multicast
@@ -31,4 +32,6 @@ tsystems ifip=212.40.34.206
 skyvision ifalias=skyvision
 wnet ifname=Fa0/0.248
 world class=world
+
+router=any
 other
