Add remote, in and out modifiers

--- a/flowd.conf
+++ b/flowd.conf
@@ -25,12 +25,12 @@ happy ip=193.193.192.209 fallthru reverse # tunnel
 local ip=10.0.0.0/8
 local ip=224.0.0.0/24 # ospf multicast
 local ifindex=1
-ukrnet as=8856
+ukrnet as=8856 out
 ukrnet nexthop=192.117.224.254
-ukrnet ifdescr=FastEthernet0/0.202
+ukrnet ifdescr=FastEthernet0/0.202 in
 tsystems ifip=212.40.34.206
 skyvision ifalias=skyvision
-wnet ifname=Fa0/0.248
+wnet ifname=Fa0/0.248 remote=193.109.240.0/23
 world class=world
 
 router=any
