Added "make clean"

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,3 +25,6 @@ test:		test.c
 install:	all
 	install flowd $(prefix)/bin
 	install flowd.conf @sysconfdir@
+
+clean:
+	rm -f *.o config.log config.cache config.status
