--- a/Makefile.in
+++ b/Makefile.in
@@ -1,26 +1,26 @@
 
 prefix=@prefix@
+CC=@CC@
+AWK=@AWK@
 COPT=-Wall -funsigned-char @DEFS@ -DCONFDIR=\"@sysconfdir@\" @CFLAGS@
+
+SRCS=flowd.c acl.c stat.c config.c getclass.c
+OBJS=${SRCS:.c=.o}
+
+.c.o:
+	@echo Compiling $*.c...
+	@$(CC) -c $(COPT) -o $*.o $*.c
 
 all:	flowd
 
-flowd:	flowd.o acl.o stat.o config.o getclass.o
-	gcc $(COPT) @LDFLAGS@ -o flowd flowd.o acl.o stat.o config.o getclass.o @LIBS@
-flowd.o:	flowd.c flowd.h
-	gcc $(COPT) -o flowd.o -c flowd.c
-acl.o:		acl.c flowd.h
-	gcc $(COPT) -o acl.o -c acl.c
-stat.o:		stat.c flowd.h
-	gcc $(COPT) -o stat.o -c stat.c
-config.o:	config.c flowd.h
-	gcc $(COPT) -o config.o -c config.c
-getclass.o:	getclass.c flowd.h
-	gcc $(COPT) -o getclass.o -c getclass.c
+flowd:	$(OBJS)
+	@echo Linking $@...
+	@$(CC) $(COPT) @LDFLAGS@ -o flowd $(OBJS) @LIBS@
 
 testacl:	acl.c flowd.h
-	gcc -g -Wall -DMAKETEST=1 -o testacl -O2 -funsigned-char acl.c
+	$(CC) -g -Wall -DMAKETEST=1 -o testacl -O2 -funsigned-char acl.c
 test:		test.c
-	gcc -g -Wall -o test -O2 -funsigned-char test.c -lpcap
+	$(CC) -g -Wall -o test -O2 -funsigned-char test.c -lpcap
 
 install:	all
 	install flowd $(prefix)/bin
@@ -28,3 +28,9 @@ install:	all
 
 clean:
 	rm -f *.o config.log config.cache config.status
+
+flowd.o: flowd.c flowd.h
+acl.o: acl.c flowd.h
+stat.o: stat.c flowd.h
+config.o: config.c flowd.h
+getclass.o: getclass.c flowd.h
