Add port and localport selectors

--- a/flowd.conf
+++ b/flowd.conf
@@ -22,6 +22,8 @@ ignore src=!10.0.1.0/24
 
 router=public@10.0.1.1	# community@addr
 happy ip=193.193.192.209 fallthru reverse # tunnel
+samba ip=10.0.0.0/8 port=137:139
+samba remote=10.0.0.0/8 localport=137:139
 local ip=10.0.0.0/8
 local ip=224.0.0.0/24 # ospf multicast
 local ifindex=1
@@ -29,6 +31,7 @@ ukrnet as=8856 out
 ukrnet nexthop=192.117.224.254
 ukrnet ifdescr=FastEthernet0/0.202 in
 tsystems ifip=212.40.34.206
+ignore ifalias=skyvision proto=icmp
 skyvision ifalias=skyvision
 wnet ifname=Fa0/0.248 remote=193.109.240.0/23
 world class=world
