--- a/configure.in
+++ b/configure.in
@@ -141,33 +141,59 @@ case x$withval in
   xno)
     ;;
   *)
-    AC_CHECK_FUNCS(strdup)
-    AC_CHECK_HEADERS(stdarg.h ucd-snmp/ucd-snmp-config.h)
-    OLD_CFLAGS=$CFLAGS
-    case x$ac_cv_header_ucd_snmp_ucd_snmp_config_h in
+    AC_CHECK_HEADERS(net-snmp/net-snmp-config.h)
+    case x$ac_cv_header_net_snmp_net_snmp_config_h in
       xyes)
         snmp_ok=yes
-        AC_DEFINE(HAVE_UCD_SNMP_SNMP_H)
+        AC_DEFINE(HAVE_NET_SNMP_SNMP_H)
+        AC_DEFINE(NET_SNMP)
         ;;
       *)
-        AC_MSG_CHECKING(if ucd-snmp-config.h is in /usr/local/include/ucd-snmp)
+        AC_MSG_CHECKING(if net-snmp-config.h is in /usr/local/include/net-snmp)
+        OLD_CFLAGS=$CFLAGS
         CFLAGS="$CFLAGS -I /usr/local/include"
         AC_TRY_COMPILE([#include <sys/types.h>
-                        #include <ucd-snmp/ucd-snmp-config.h>
-                        #include <ucd-snmp/asn1.h>
-                        #include <ucd-snmp/snmp.h>], [],
+                        #include <net-snmp/net-snmp-config.h>
+                        #include <net-snmp-includes.h>], [],
                         AC_MSG_RESULT(yes); snmp_ok=yes,
                         AC_MSG_RESULT(no); snmp_ok=no)
         case x$snmp_ok in
           xyes)
-            AC_DEFINE(HAVE_UCD_SNMP_SNMP_H)
+            AC_DEFINE(HAVE_NET_SNMP_SNMP_H)
+            AC_DEFINE(NET_SNMP)
             ;;
           *)
             CFLAGS="$OLD_CFLAGS"
-            case x$do_snmp in
+            AC_CHECK_HEADERS(ucd-snmp/ucd-snmp-config.h)
+            case x$ac_cv_header_ucd_snmp_ucd_snmp_config_h in
               xyes)
-                AC_MSG_WARN([ucd-snmp not found, SNMP support disabled])
-                do_snmp=no
+                snmp_ok=yes
+                AC_DEFINE(HAVE_UCD_SNMP_SNMP_H)
+                ;;
+              *)
+                AC_MSG_CHECKING(if ucd-snmp-config.h is in /usr/local/include/ucd-snmp)
+                OLD_CFLAGS=$CFLAGS
+                CFLAGS="$CFLAGS -I /usr/local/include"
+                AC_TRY_COMPILE([#include <sys/types.h>
+                                #include <ucd-snmp/ucd-snmp-config.h>
+                                #include <ucd-snmp/asn1.h>
+                                #include <ucd-snmp/snmp.h>], [],
+                                AC_MSG_RESULT(yes); snmp_ok=yes,
+                                AC_MSG_RESULT(no); snmp_ok=no)
+                case x$snmp_ok in
+                  xyes)
+                    AC_DEFINE(HAVE_UCD_SNMP_SNMP_H)
+                    ;;
+                  *)
+                    CFLAGS="$OLD_CFLAGS"
+                    case x$do_snmp in
+                      xyes)
+                        AC_MSG_WARN([net-snmp or ucd-snmp not found, SNMP support disabled])
+                        do_snmp=no
+                        ;;
+                    esac
+                    ;;
+                esac
                 ;;
             esac
             ;;
@@ -237,11 +263,11 @@ AC_ARG_WITH(minprefix,
      [maxprefix=$withval],[])
 [if echo $nbits | grep -q '[^0-9]' || [ $nbits -ne 1 -a $nbits -ne 2 -a $nbits -ne 4 -a $nbits -ne 8 -a $nbits -ne 16 ]]
 then
-	AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
+        AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
 fi
 [if echo $maxprefix | grep -q '[^0-9]' || [ $maxprefix -gt 32 -o $maxprefix -lt 16 ]]
 then
-	AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
+        AC_ERROR(Incorrect nbits value $nbits, must be 1..16, power of 2)
 fi
 
 AC_DEFINE_UNQUOTED(NBITS, $nbits)
