--- a/configure.in
+++ b/configure.in
@@ -141,16 +141,19 @@ case x$withval in
   xno)
     ;;
   *)
+    AC_CHECK_FUNC(strdup)
+    AC_CHECK_HEADERS(stdarg.h)
+    OLD_CFLAGS=$CFLAGS
     AC_CHECK_HEADERS(net-snmp/net-snmp-config.h)
     case x$ac_cv_header_net_snmp_net_snmp_config_h in
       xyes)
         snmp_ok=yes
         AC_DEFINE(HAVE_NET_SNMP_SNMP_H)
         AC_DEFINE(NET_SNMP)
+        net_snmp=yes
         ;;
       *)
         AC_MSG_CHECKING(if net-snmp-config.h is in /usr/local/include/net-snmp)
-        OLD_CFLAGS=$CFLAGS
         CFLAGS="$CFLAGS -I /usr/local/include"
         AC_TRY_COMPILE([#include <sys/types.h>
                         #include <net-snmp/net-snmp-config.h>
@@ -161,6 +164,7 @@ case x$withval in
           xyes)
             AC_DEFINE(HAVE_NET_SNMP_SNMP_H)
             AC_DEFINE(NET_SNMP)
+            net_snmp=yes
             ;;
           *)
             CFLAGS="$OLD_CFLAGS"
@@ -202,35 +206,68 @@ case x$withval in
     esac
     case x$snmp_ok in
       xyes)
-        AC_MSG_CHECKING(for libsnmp)
-        OLD_LIBS="$LIBS"
-        LIBS="$LIBS -lsnmp -lcrypto"
-        AC_TRY_LINK([],[snmp_sess_init()],
-          AC_MSG_RESULT(yes), AC_MSG_RESULT(no); snmp_ok=no,
-          AC_MSG_RESULT(cross-compiling. No assumptions made); snmp_ok=no)
-        case x$snmp_ok in
-          xno)
-            AC_MSG_CHECKING(for libsnmp in /usr/local/lib)
-            OLD_LDFLAGS="$LDFLAGS"
-            LDFLAGS="$LDFLAGS -L/usr/local/lib"
+        case x$net_snmp in
+          xyes)
+            AC_MSG_CHECKING(for libnetsnmp)
+            OLD_LIBS="$LIBS"
+            LIBS="$LIBS -lnetsnmp -lcrypto"
             AC_TRY_LINK([],[snmp_sess_init()],
-             AC_MSG_RESULT(yes); snmp_ok=yes, AC_MSG_RESULT(no),
-             AC_MSG_RESULT(cross-compiling. No assumptions made))
+              AC_MSG_RESULT(yes), AC_MSG_RESULT(no); snmp_ok=no,
+              AC_MSG_RESULT(cross-compiling. No assumptions made); snmp_ok=no)
             case x$snmp_ok in
               xno)
-                case x$do_snmp in
-                  xyes)
-                    AC_MSG_WARN([ucd-snmp not found, SNMP support disabled])
-                    do_snmp=no
+                AC_MSG_CHECKING(for libnetsnmp in /usr/local/lib)
+                OLD_LDFLAGS="$LDFLAGS"
+                LDFLAGS="$LDFLAGS -L/usr/local/lib"
+                AC_TRY_LINK([],[snmp_sess_init()],
+                 AC_MSG_RESULT(yes); snmp_ok=yes, AC_MSG_RESULT(no),
+                 AC_MSG_RESULT(cross-compiling. No assumptions made))
+                case x$snmp_ok in
+                  xno)
+                    LIBS="$OLD_LIBS"
+                    LDFLAGS="$OLD_LDFLAGS"
                     ;;
                 esac
-                CFLAGS="$OLD_CFLAGS"
-                LIBS="$OLD_LIBS"
-                LDFLAGS="$OLD_LDFLAGS"
                 ;;
             esac
             ;;
-          esac
+          *)
+            snmp_ok=no
+            ;;
+        esac
+        case x$snmp_ok in
+          xno)
+            AC_MSG_CHECKING(for libsnmp)
+            OLD_LIBS="$LIBS"
+            LIBS="$LIBS -lsnmp -lcrypto"
+            AC_TRY_LINK([],[snmp_sess_init()],
+              AC_MSG_RESULT(yes), AC_MSG_RESULT(no); snmp_ok=no,
+              AC_MSG_RESULT(cross-compiling. No assumptions made); snmp_ok=no)
+            case x$snmp_ok in
+              xno)
+                AC_MSG_CHECKING(for libsnmp in /usr/local/lib)
+                OLD_LDFLAGS="$LDFLAGS"
+                LDFLAGS="$LDFLAGS -L/usr/local/lib"
+                AC_TRY_LINK([],[snmp_sess_init()],
+                 AC_MSG_RESULT(yes); snmp_ok=yes, AC_MSG_RESULT(no),
+                 AC_MSG_RESULT(cross-compiling. No assumptions made))
+                case x$snmp_ok in
+                  xno)
+                    case x$do_snmp in
+                      xyes)
+                        AC_MSG_WARN([libsnmp not found, SNMP support disabled])
+                        do_snmp=no
+                        ;;
+                    esac
+                    CFLAGS="$OLD_CFLAGS"
+                    LIBS="$OLD_LIBS"
+                    LDFLAGS="$OLD_LDFLAGS"
+                    ;;
+                esac
+                ;;
+            esac
+            ;;
+        esac
         ;;
     esac
     case x$snmp_ok in
@@ -238,7 +275,7 @@ case x$withval in
         AC_DEFINE(DO_SNMP)
         ;;
     esac
-  ;;
+    ;;
 esac
 
 dnl Set dirs
