--- a/configure.in
+++ b/configure.in
@@ -76,7 +76,8 @@ case x$do_perl in
           int main(int argc, char** argv, char** env) {
             return perl_alloc() ? 0 : 1;
           }],
-        AC_DEFINE(DO_PERL) AC_MSG_RESULT(yes); WORKING_PERL=yes,
+        AC_DEFINE(DO_PERL) AC_MSG_RESULT(yes); WORKING_PERL=yes;
+        perlsrc=flowperl.c,
         AC_MSG_RESULT(no); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS,
         AC_MSG_RESULT(cross-compiling. No assumptions made); CFLAGS=$OLD_CFLAGS; LIBS=$OLD_LIBS
        )
@@ -309,5 +310,6 @@ fi
 
 AC_DEFINE_UNQUOTED(NBITS, $nbits)
 AC_DEFINE_UNQUOTED(MAXPREFIX, $maxprefix)
+AC_SUBST(perlsrc)
 
 AC_OUTPUT(Makefile)
