--- a/flowd.conf
+++ b/flowd.conf
@@ -36,5 +36,13 @@ skyvision ifalias=skyvision
 wnet ifname=Fa0/0.248 remote=193.109.240.0/23
 world class=world
 
+# Include file (only one level of includes!)
+@include /usr/local/etc/clients_router1.cfg
+
+# Call perl function and parse its output
+# Args is strings, quotes possible
+# For example, this function can get data from mysql database
+@perl_include /usr/local/etc/flowd.pl::clients(10.0.1.1)
+
 router=any
 other
