--- a/flowd.conf
+++ b/flowd.conf
@@ -36,7 +36,7 @@ skyvision ifalias=skyvision
 wnet ifname=Fa0/0.248 remote=193.109.240.0/23
 world class=world
 
-# Include file (only one level of includes!)
+# Include file
 @include /usr/local/etc/clients_router1.cfg
 
 # Call perl function and parse its output
