--- a/configure.in
+++ b/configure.in
@@ -14,7 +14,7 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 
 dnl Checks for library functions.
 
-AC_CHECK_FUNCS(inet_addr daemon)
+AC_CHECK_FUNCS(inet_addr daemon strerror_r)
 case x$ac_cv_func_inet_addr in
   xno)
     AC_MSG_CHECKING(for inet_addr in -lxnet)
@@ -24,6 +24,10 @@ case x$ac_cv_func_inet_addr in
           AC_MSG_RESULT(yes), AC_MSG_RESULT(no); AC_ERROR(no inet_addr() found))
     ;;
 esac
+
+AC_MSG_CHECKING(for sys_errlist)
+AC_TRY_LINK([#include <stdio.h>],[*sys_errlist],
+          AC_DEFINE(HAVE_SYS_ERRLIST) AC_MSG_RESULT(yes), AC_MSG_RESULT(no))
 
 dnl Check for embedded perl
 AC_ARG_WITH(perl,
