--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,12 @@ CFLAGS=
 dnl Checks for header files.
 
 dnl Checks for typedefs, structures, and compiler characteristics.
+dnl check for socklen_t
+dnl
+AC_MSG_CHECKING(for socklen_t)
+AC_TRY_COMPILE([#include <sys/types.h>
+#include <sys/socket.h>
+#include <netdb.h>], [socklen_t i], AC_DEFINE(HAVE_SOCKLEN_T) AC_MSG_RESULT(yes), AC_MSG_RESULT(no), AC_MSG_RESULT(cross-compiling. No assumptions made))
 
 dnl Checks for library functions.
 
