--- a/flowd.conf
+++ b/flowd.conf
@@ -9,7 +9,7 @@ reload-int=600
 #fromshmem=yes
 #mapkey=12011971
 classes=world, ua, local, undef
-#perlwrite=/usr/local/etc/flowd.pl::write
+#perlwrite=/usr/local/etc/flowd.pl::writetraf
 #mysql_user=
 #mysql_pwd=
 #mysql_host=localhost:0
